# 3dsoftviz

./: .gitignore  CMakeLists.txt  readme.TXT
CMakeModules/cuda/: FindCuda.cmake
CMakeModules/osgcompute/: Findosgcompute.cmake  Findosgcuda.cmake
dependencies/Source/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/: CMakeLists.txt  README.txt
dependencies/Source/osgCompute-1.1/CMakeModules/: GroupInstall.cmake  MacroUtils.cmake  ModuleInstall.cmake  cmake_uninstall.cmake.in
dependencies/Source/osgCompute-1.1/CMakeModules/cudansight/: Annoatations_CommandLine_etc.txt
dependencies/Source/osgCompute-1.1/CMakeModules/osg/: FindOpenThreads.cmake  Findosg_functions.cmake  Readme.txt
dependencies/Source/osgCompute-1.1/examples/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgEndiannessDemo/src/: CMakeLists.txt  main.cpp  main.cu
dependencies/Source/osgCompute-1.1/examples/osgEndiannessNsight/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgGeometryDemo/include/: Warp
dependencies/Source/osgCompute-1.1/examples/osgGeometryDemo/src/: CMakeLists.txt  Warp.cpp  Warp.cu  main.cpp
dependencies/Source/osgCompute-1.1/examples/osgGeometryEmu/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgGeometryNsight/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgParticleDemo/include/: PtclEmitter  PtclMover
dependencies/Source/osgCompute-1.1/examples/osgParticleDemo/src/: CMakeLists.txt  PtclEmitter.cpp  PtclEmitter.cu  PtclMover.cpp  PtclMover.cu  main.cpp
dependencies/Source/osgCompute-1.1/examples/osgParticleNsight/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgTexDemo/include/: TexFilter
dependencies/Source/osgCompute-1.1/examples/osgTexDemo/src/: CMakeLists.txt  TexFilter.cpp  TexFilter.cu  main.cpp
dependencies/Source/osgCompute-1.1/examples/osgTexNsight/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgTraceDemo/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/examples/osgTraceDemo/Application/src/: CMakeLists.txt  main.cpp
dependencies/Source/osgCompute-1.1/examples/osgTraceDemo/EmitModule/src/: CMakeLists.txt  PtclEmitter.cpp  PtclEmitter.cu
dependencies/Source/osgCompute-1.1/examples/osgTraceDemo/TraceModule/src/: CMakeLists.txt  PtclTracer.cpp  PtclTracer.cu
dependencies/Source/osgCompute-1.1/include/osgCompute/: Callback  Computation  ComputationBin  Export  Interoperability  Memory  Module  Resource  Visitor
dependencies/Source/osgCompute-1.1/include/osgCuda/: Computation  Export  Geometry  Memory  Texture
dependencies/Source/osgCompute-1.1/include/osgCudaUtil/: PingPongBuffer  PingPongSwitch  Timer
dependencies/Source/osgCompute-1.1/src/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/src/osgCompute/: CMakeLists.txt  Computation.cpp  ComputationBin.cpp  Memory.cpp  Module.cpp  Resource.cpp  Visitor.cpp
dependencies/Source/osgCompute-1.1/src/osgCuda/: CMakeLists.txt  Computation.cpp  Geometry.cpp  Memory.cpp  Texture.cpp
dependencies/Source/osgCompute-1.1/src/osgCudaEmu/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/src/osgCudaNsight/: CMakeLists.txt
dependencies/Source/osgCompute-1.1/src/osgCudaSerializer/: CMakeLists.txt  Computation.cpp  CudaMemory.cpp  Geometry.cpp  Memory.cpp  Resource.cpp  Texture2D.cpp  Texture3D.cpp  TextureRectangle.cpp  Util.cpp  Util.h
dependencies/Source/osgCompute-1.1/src/osgCudaUtil/: CMakeLists.txt  PingPongBuffer.cpp  PingPongSwitch.cpp  Timer.cpp
include/Core/: Core.h  Example.h
include/Data/: Edge.h  Graph.h  GraphLayout.h  GraphSerializer.h  Node.h  Type.h  Vector.h
include/Gpu/: LayoutModule.h  ResourceVisitor.h
include/Importer/: MTXImporter.h
include/Layout/: FRAlgorithm.h  LayoutThread.h
include/QOSG/: ViewerQT.h
include/Util/: ApplicationConfig.h
include/Viewer/: CameraManipulator.h  CoreGraph.h  EdgeGroup.h  NodeGroup.h  PickHandler.h  SkyTransform.h
resources/config/: config
src/: main.cpp
src/Core/: Core.cpp
src/Data/: Edge.cpp  Example.cpp  Graph.cpp  GraphLayout.cpp  GraphSerializer.cpp  Node.cpp  Type.cpp  Vector.cpp
src/Gpu/: LayoutKernel.cu  LayoutModule.cpp  ResourceVisitor.cpp
src/Importer/: ImporterFactory.cpp  MTXImporter.cpp
src/Layout/: FRAlgorithm.cpp  Layout.cpp  LayoutThread.cpp
src/Model/: DB.cpp  EdgeDAO.cpp
src/QOSG/: CoreWindow.cpp  qtcolorpicker.moc
src/Viewer/: CameraManipulator.cpp  CoreGraph.cpp  EdgeGroup.cpp  NodeGroup.cpp  PickHandler.cpp
